Added a visualization of solving the 8-puzzle.
The 8-puzzle works quite well; there are play/pause/forward/backward/skip to start/skip to end buttons, a slider for the speed, and one can paste in the solving path for an 8-puzzle from python. Visually, things could be made a little nicer though; in particular, the puzzle itself should be larger and centered.
Updated the navbar to have links between the graph class pages (the spacing needs fixing).
Also added a todo list to keep track of next steps.

--- a/graphs_and_games/create_map.html
+++ b/graphs_and_games/create_map.html
@@ -28,8 +28,10 @@
 <body>
 <v-app id="app">
 
-  <v-toolbar class="teal" dark>
+  <v-toolbar dark class="teal">
     <v-toolbar-title>Create Map</v-toolbar-title>
+    <v-spacer></v-spacer>
+    <a v-for="item in navbarItems" :href="item.link" :style="{textDecoration: 'none', color: 'white'}">{{ item.name }}</a>
   </v-toolbar>
 
   <main>
@@ -119,7 +121,12 @@
             },
             selectedTerrain: 'forest',
             gridString: '',
-            terrainString: ''
+            terrainString: '',
+            navbarItems: [
+                {name: 'Home', link: 'index.html'},
+                {name: 'Create Map', link: 'create_map.html'},
+                {name: 'View 8-Puzzle', link: 'eight_puzzle.html'}
+            ]
         },
         methods: {
             // Making grid computed didn't work well; I think it tried to recompute it too often, so changing the cell
